Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.2, 5.2.1, 5.3.0, 5.3.1
-
Linux Ubuntu 13.04
Mac OS 10.7
-
-
d8f4abec711d7af4013209fd8b0c9edcedb44ab6 382b7afbe253c29499631066bbe1091f0afbd386
Description
When my application/dialog is minimized/iconified, a call to showNormal() doesn't restore it on the screen. The flags are changed (e.g isMinized() return false after the call) but the dialog iconified doesn't move, is not restored.
I did a sample project (attached) to show the behavior. If the checkbox inside the dialog is checked, a timer fire every 3 seconds to test if the dialog is minimized/iconified. If it's the case, it calls showNormal on it and the window should be restore on the screen (above or below active window, to have a better test, just minimized every other windows). When the exemple run, minimized the dialog and wait 3 seconds, the dialog should be restore but it's not the case on Mac OS and Linux for Qt 5.0.2. I don't have the issue on Windows 7.
This is a regression in Qt 5, I tested the following example on Qt 4.8.4 and the result is correct.
Attachments
Issue Links
- is duplicated by
-
QTBUG-33375 QPushButton which minimizes a window does not emit released, then auto-fires on hover after restoring
-
- Closed
-
-
QTBUG-34430 wrong window state on xcb platform
-
- Closed
-
-
QTBUG-39376 XCB: isMinimized() returns wrong status
-
- Closed
-